hphp/test/zend/good/tests-classes/static_properties_undeclared_read.php
<?php
Class C {}
echo C::$p;
?>