hphp/test/zend/bad/bug55445.php
<?php $u = "chris"; ?><p>Welcome <?= $u ?></p>